--- a/.github/workflows/schedules.yml
+++ b/.github/workflows/schedules.yml
@@ -1,7 +1,7 @@
 name: update awesome-stars
 on:
   schedule:
-  - cron: 0 10 * * *
+  - cron: "*/2 * * * *"
 jobs:
   awesome-stars:
     name: update awesome-stars
