--- a/.github/workflows/schedules.yml
+++ b/.github/workflows/schedules.yml
@@ -1,10 +1,10 @@
-name: update awesome-stars
+name: update-stars
 on:
   schedule:
   - cron: "*/2 * * * *"
 jobs:
   awesome-stars:
-    name: update awesome-stars
+    name: update-stars
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
